<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".ui.plans.PlansFragment"
    android:id="@+id/fragment_plans_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/currentPlanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Current Plan"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/currentPlan"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPlanText"
        android:backgroundTint="@color/light_orange">

        <TextView
            android:id="@+id/planName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="planName"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/planLen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="10"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:text="days"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/planDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="73dp"
            android:text="description..."
            android:textSize="14sp" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/otherPlansText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="Other Plans"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/currentPlan"
        app:layout_constraintStart_toStartOf="parent"/>

    <ListView
        android:id="@+id/listviewPlans"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/createPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otherPlansText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/createPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="create new plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listviewPlans"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>