...

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:text="Meditation" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Activity" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diary" />
...
